--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sparkpost-sync",
   "version": "1.0.0",
-  "description": "Sync up sparkpost templates in a github repo with sparkpost your sparkpost account.",
+  "description": "Sync up sparkpost templates in a github repo with your sparkpost account.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
